исправил команды на правильное использование стореджа